message TravelItem{
    required int32 id = 1;
    required int32 num = 2;
}
